--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,15 +12,7 @@ http {
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log warn;
-
-    # Basic settings
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
-    client_max_body_size 10M;
+    error_log /var/log/nginx/error.log;
 
     # Gzip compression
     gzip on;
@@ -44,18 +36,34 @@ http {
     limit_req_zone $binary_remote_addr zone=login:10m rate=5r/m;
 
     # Upstream servers
-    upstream frontend {
-        server frontend:3000;
-    }
-
     upstream backend {
         server backend:8000;
     }
 
-    # Main server block
+    upstream frontend {
+        server frontend:80;
+    }
+
+    # HTTP server (redirect to HTTPS)
     server {
         listen 80;
-        server_name localhost;
+        server_name _;
+        return 301 https://$host$request_uri;
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl http2;
+        server_name _;
+
+        # SSL configuration
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
 
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
@@ -63,20 +71,7 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
         add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
-
-        # Frontend routes
-        location / {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            proxy_read_timeout 86400;
-        }
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
         # API routes
         location /api/ {
@@ -91,72 +86,46 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
-            proxy_read_timeout 30s;
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 30s;
+            
+            # Timeouts
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
         }
 
-        # Health check endpoint
+        # Authentication routes (stricter rate limiting)
+        location /api/auth/ {
+            limit_req zone=login burst=5 nodelay;
+            
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Health check
         location /health {
-            proxy_pass http://backend;
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
+        }
+
+        # Frontend routes
+        location / {
+            proxy_pass http://frontend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # API documentation
-        location /api-docs {
-            proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Static files
-        location /static/ {
-            proxy_pass http://frontend;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-
-        # Favicon and other static assets
-        location ~* \.(ico|css|js|gif|jpe?g|png|svg|woff|woff2|ttf|eot)$ {
-            proxy_pass http://frontend;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-
-        # Error pages
-        error_page 404 /404.html;
-        error_page 500 502 503 504 /50x.html;
-        
-        location = /50x.html {
-            root /usr/share/nginx/html;
+            proxy_cache_bypass $http_upgrade;
         }
     }
-
-    # HTTPS server block (for production)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name your-domain.com;
-    #
-    #     ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
-    #     ssl_prefer_server_ciphers off;
-    #
-    #     # Same location blocks as above
-    #     location / {
-    #         proxy_pass http://frontend;
-    #         # ... same proxy settings
-    #     }
-    #
-    #     location /api/ {
-    #         proxy_pass http://backend;
-    #         # ... same proxy settings
-    #     }
-    # }
 } 
